--- a/translations/kangyur/translations/090-001_toh557-the_sutra_of_the_sublime_golden_light_3.xml
+++ b/translations/kangyur/translations/090-001_toh557-the_sutra_of_the_sublime_golden_light_3.xml
@@ -37,7 +37,7 @@
                 <sponsor xml:id="UT22084-090-001-6">May Gu, Likai Gu and Tiffany Tai, Lillian Gu and Jerry Yen, and dedicated to George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -150,6 +150,9 @@
                 </change>
                 <change who="#sameer" when="2024-10-17T16:22:39.095Z" type="text-version" status="1.0.2" xml:id="UT22084-090-001-2039">
                     <desc>Added a paragraph to the summary</desc>
+                </change>
+                <change who="#celso" when="2024-10-22T16:21:41.253Z" type="text-version" status="1.0.3" xml:id="UT22084-090-001-2040">
+                    <desc>corrected term bhikṣuṇī</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -2785,13 +2788,13 @@
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-542"/>
                     <p tid="379">“Venerable Bhagavat, if a human king<note place="end" xml:id="UT22084-090-001-543"> The Sanskrit has “all human
-                            kings.” </note> were to make happy, through whatever brings happiness, the bhikṣus, bhikṣunīs, upāsakas, and upāsikās who
+                            kings.” </note> were to make happy, through whatever brings happiness, the bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās who
                         possess this lord of sūtras,<note place="end" xml:id="UT22084-090-001-544"> The last half of this paragraph and the first half
                             of the next are absent in the Sanskrit version.</note> then, venerable Bhagavat, we Four Mahārājas will, through the
                         requisites for happiness, bring the perfection of happiness and requisites to the beings who dwell in all the dominions of
                         those human kings.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-545"/>
-                    <p tid="380">“Venerable Bhagavat, when human kings honor, revere, attend upon, and make offerings to the bhikṣus, bhikṣunīs,
+                    <p tid="380">“Venerable Bhagavat, when human kings honor, revere, attend upon, and make offerings to the bhikṣus, bhikṣuṇīs,
                         upāsakas, and upāsikās who possess this lord of sūtras, then, venerable Bhagavat, we Four Mahārājas will cause all kings to
                         greatly honor, revere, attend upon, and make offerings to those human kings, and they will be praised in all their
                         dominions.”</p>
@@ -2819,7 +2822,7 @@
                     <p tid="386">“Therefore, you Four Mahārājas, with your army, attendants, and many hundreds of thousands of yakṣas, will be
                         victorious in the battle between the devas and asuras. You will defeat the asuras. In this way, <title xml:lang="en">The Lord
                             King of Sūtras, The Sublime Golden Light</title> subjugates all opposing armies. For that reason, you should guard the
-                        bhikṣus, bhikṣunīs, upāsakas, and upāsikās who possess this lord of sūtras. You should defend them, keep them in your care,
+                        bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās who possess this lord of sūtras. You should defend them, keep them in your care,
                         protect them, and bring them peace and well-being.”</p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-553"/>
                     <p tid="387">Then Mahārāja Vaiśravaṇa, Mahārāja Dhṛtarāṣṭra, Mahārāja Virūḍhaka, and Mahārāja Virūpākṣa rose from their seats,
@@ -2829,7 +2832,7 @@
                         town, market town, district, kingdom, or royal capital; when it is performed in the domain of any human king; and when,
                         venerable Bhagavat, any human king who acts as a king in accordance with the commitment of the lord of devas and with this
                         treatise on kingship, and always listens to, worships, and makes offerings to this <title xml:lang="en">Lord King of Sūtras,
-                            The Sublime Golden Light</title>, and honors, venerates, worships, and makes offerings to the bhikṣus, bhikṣunīs,
+                            The Sublime Golden Light</title>, and honors, venerates, worships, and makes offerings to the bhikṣus, bhikṣuṇīs,
                         upāsakas, and upāsikās who possess this <title xml:lang="en">Lord King of Sūtras</title>, and always listens to this <title xml:lang="en">Lord King of Sūtras, The Sublime Golden Light</title>, then at that time, through the liquid amṛta of this
                         Dharma, through the water of the river of listening to the Dharma, the divine bodies of we Four Mahārājas and our army,
                         attendants, and many hundred thousands of yakṣas will increase in their great magnificence, and we will have great diligence,
@@ -2899,7 +2902,7 @@
                         blissful realms. The mansions of the devas will be filled with devas and their children. </p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-570"/>
                     <p tid="399">“Mahārājas, where there is a human king who listens to, worships, and makes offerings to this <title xml:lang="en">Lord King of Sūtras, The Sublime Golden Light</title>; and honors, venerates, worships, and makes offerings to the
-                        bhikṣus, bhikṣunīs, upāsakas, and upāsikās who possess this <title xml:lang="en">Lord King of Sūtras, the Sublime Golden
+                        bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās who possess this <title xml:lang="en">Lord King of Sūtras, the Sublime Golden
                             Light</title>; and who, out of kindness to you Four Mahārājas, your army and attendants, and your many hundred thousands
                         of yakṣas, always listens to this <title xml:lang="en">Lord King of Sūtras, The Sublime Golden Light</title>, <ref cRef="F.19.a" type="folio" xml:id="UT22084-090-001-1878"/> then through the water of the river of listening to the Dharma,
                         the liquid amṛta of this Dharma, your divine bodies will be refreshed, and your divine bodies will increase in their great
@@ -2990,7 +2993,7 @@
                         without the oppression of invading armies, disease, and disturbances.’</p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-586"/>
                     <p tid="408">“Mahārājas, if the king who with this reverence for the Dharma honors, venerates, worships, and makes offerings to
-                        the bhikṣus, bhikṣunīs, upāsakas, and upāsikās who possess <title xml:lang="en">The Lord King of Sūtras, The Sublime Golden
+                        the bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās who possess <title xml:lang="en">The Lord King of Sūtras, The Sublime Golden
                             Light</title>, and dedicates the best part to you Four Mahārājas, <ref cRef="F.21.b" type="folio" xml:id="UT22084-090-001-1883"/> your army, your attendants, the host of devas, and the many hundred thousands of yakṣas,
                         then he will manifest the merit, he will manifest the good karma, and in that life his great sovereignty will increase
                         incalculably. In that life he will possess the incalculable great magnificence of a king, and he will be adorned by splendor,
@@ -2998,7 +3001,7 @@
                         enemies.”</p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-587"/>
                     <p tid="409">When the Bhagavat had said that, the Four Mahārājas said to him, “Venerable Bhagavat, if there is a human king with
-                        such a reverence for the Dharma as that—one who honors, venerates, worships, and makes offerings to the bhikṣus, bhikṣunīs,
+                        such a reverence for the Dharma as that—one who honors, venerates, worships, and makes offerings to the bhikṣus, bhikṣuṇīs,
                         upāsakas, and upāsikās who possess <title xml:lang="en">The Lord King of Sūtras, The Sublime Golden Light</title>, and who,
                         for our sake, purifies and cleans the royal palace, and sprinkles it well with various perfumes—then he will be listening to
                         the Dharma together with us, the Four Mahārājas. If he gives a little share of his roots of merit to us and all devas, then,
@@ -3133,7 +3136,7 @@
                         them from attack. We will free those in that domain from all fear, harm, disease, and disturbances.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-623"/>
                     <p tid="434">“Venerable Bhagavat, when someone is a human king and in that human king’s domain there appears <title xml:lang="en">The Lord King of Sūtras, the Sublime Golden Light</title>, then, venerable Bhagavat, if that human king does not honor,
-                        venerate, worship, and make offerings to the bhikṣus, bhikṣunīs, upāsakas, and upāsikās who possess <title xml:lang="en">The
+                        venerate, worship, and make offerings to the bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās who possess <title xml:lang="en">The
                             Lord King of Sūtras, the Sublime Golden Light</title>, and we, the Four Mahārājas, and our army, attendants, and many
                         hundreds of thousands of yakṣas, are not satiated by hearing this Dharma and by the liquid amṛta of the Dharma, and are not
                         worshiped, then the brilliance of our bodies will not increase. Our diligence, power, and might will not develop, and
@@ -3168,7 +3171,7 @@
                         domain for a long time; who wishes to be a Dharma king; and who wishes to free his domain from all fear, harm, disease, and
                         disturbances, <ref cRef="F.25.b" type="folio" xml:id="UT22084-090-001-1891"/> then, venerable Bhagavat, that human king should
                         listen with conviction to this <title xml:lang="en">Lord King of Sūtras, the Sublime Golden Light</title>. He should honor,
-                        venerate, worship, and make offerings to the bhikṣus, bhikṣunīs, upāsakas, and upāsikās who possess <title xml:lang="en">The
+                        venerate, worship, and make offerings to the bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās who possess <title xml:lang="en">The
                             Lord King of Sūtras, the Sublime Golden Light</title>. We, the Four Mahārājas, and our army and attendants should become
                         satisfied by this accumulation of the roots of merit through listening to the Dharma and by this liquid amṛta of the Dharma.
                         The great brilliance of these divine bodies of ours should be increased. </p>
@@ -3222,16 +3225,16 @@
                         attendants, should with great enthusiasm guard the kings who with conviction listen to, worship, and make offerings to this
                             <title xml:lang="en">Lord King of Sūtras, the Sublime Golden Light</title>. </p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-641"/>
-                    <p tid="447">“Mahārājas, you should cause the bhikṣus, bhikṣunīs, upāsakas, and upāsikās who possess this lord king of sūtras to
+                    <p tid="447">“Mahārājas, you should cause the bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās who possess this lord king of sūtras to
                         possess buddha activity.<note place="end" xml:id="UT22084-090-001-642"> According to the Tibetan. The Sanskrit translates as
                             “show them the buddha realms.”</note> They will perform buddha activity in this world with its devas, humans, and asuras.
                         They will extensively and correctly teach this <title xml:lang="en">Lord King of Sūtras, the Sublime Golden Light</title>.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-643"/>
-                    <p tid="448">“You, the Four Mahārājas, should ensure that the bhikṣus, bhikṣunīs, upāsakas, and upāsikās who possess this lord of
+                    <p tid="448">“You, the Four Mahārājas, should ensure that the bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās who possess this lord of
                         sūtras are guarded, are unharmed, have no illness, have no disturbances, and are happy. <ref cRef="F.27.a" type="folio" xml:id="UT22084-090-001-1894"/>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-644"/>
-                    <p tid="449">“Guard, defend, take in your care, protect, and bring peace and well-being to the bhikṣus, bhikṣunīs, upāsakas, and
+                    <p tid="449">“Guard, defend, take in your care, protect, and bring peace and well-being to the bhikṣus, bhikṣuṇīs, upāsakas, and
                         upāsikās who will teach this <title xml:lang="en">Lord King of Sūtras, the Sublime Golden Light</title>.”</p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-645"/>
                     <p tid="450">Then Mahārāja Vaiśravaṇa, Mahārāja Dhṛtarāṣṭra, Mahārāja Virūḍhaka, and Mahārāja Virūpākṣa rose from their seats, and
@@ -3592,7 +3595,7 @@
                         monasteries. </p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-726"/>
                     <p tid="498">“I will end harm from planetary afflictions, fighting, and pollution; harm from the stars of one’s birth; and all
-                        harm from nightmares, troublesome demons, and all evil spirits and vetālas for the bhikṣus, bhikṣunīs, upāsakas, and upāsikās
+                        harm from nightmares, troublesome demons, and all evil spirits and vetālas for the bhikṣus, bhikṣuṇīs, upāsakas, and upāsikās
                         who possess this lord of sūtras, so that their lifespan will be benefited and they will abandon saṃsāra, will progress
                         irreversibly to the highest, most complete enlightenment, and will quickly attain the highest, most complete enlightenment of
                         buddhahood.”</p>
@@ -3952,7 +3955,7 @@
                         become filled with human beings. All beings in Jambudvīpa will become happy and experience various kinds of joy. Those beings
                         will possess majesty, strength, and excellent color and form. </p>
                     <milestone unit="chunk" xml:id="UT22084-090-001-855"/>
-                    <p tid="566">“For the sake of this <title xml:lang="en">Lord King of Sūtras, the Sublime Golden Light</title>, bhikṣus, bhikṣunīs,
+                    <p tid="566">“For the sake of this <title xml:lang="en">Lord King of Sūtras, the Sublime Golden Light</title>, bhikṣus, bhikṣuṇīs,
                         upāsakas, and upāsikās should approach the Dharma seat of those who possess this lord king of the sūtras. Having approached it
                         with a perfectly trusting mind, for the welfare, benefit, and happiness of all beings, they should supplicate the
                         dharmabhāṇaka so that this <title xml:lang="en">Lord King of Sūtras, the Sublime Golden Light</title> will be taught
@@ -7416,7 +7419,7 @@
                     <bibl xml:id="UT22084-090-001-1555">Bagchi, S., ed. <title xml:lang="Sa-Ltn">Suvarṇa­prabhāsasūtram</title>. Darbhanga: The
                         Mithila Institute, 1967. Digital Sanskrit Buddhist Canon.</bibl>
                     <bibl xml:id="UT22084-090-001-1556">Banerjee, Radha. <title xml:lang="Sa-Ltn">Suvarṇa­prabhāsottama­sūtra</title>. London: British
-                        Library, 2006. http://idp.bl.uk/downloads/GoldenLight.pdf.</bibl>
+                        Library, 2006. <ref target="http://idp.bl.uk/downloads/GoldenLight.pdf">http://idp.bl.uk/downloads/GoldenLight.pdf</ref>.</bibl>
                     <bibl xml:id="UT22084-090-001-1557">Buswell Jr., Robert E., and Donald Lopez Jr. <title xml:lang="en">The Princeton Dictionary of
                             Buddhism</title>. Princeton University Press, 2014.</bibl>
                     <bibl xml:id="UT22084-090-001-1558">Di, Guan. “The Sanskrit Fragments Preserved in Arthur M. Sackler Museum of Peking University.”
@@ -7636,10 +7639,10 @@
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-090-001-1590">
-                            <term type="translationMain">bhikṣunī</term>
+                            <term type="translationMain">bhikṣuṇī</term>
                             <term xml:lang="Bo-Ltn" status="verified" n="1">dge slong ma</term>
                             <term xml:lang="bo" n="1">དགེ་སློང་མ།</term>
-                            <term xml:lang="Sa-Ltn" status="verified" type="attestedSource">bhikṣunī</term>
+                            <term xml:lang="Sa-Ltn" status="verified" type="attestedSource">bhikṣuṇī</term>
                         </gloss>
                     </item>
                     <item>
@@ -8366,18 +8369,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-090-001-1644">
+                        <gloss xml:id="UT22084-090-001-1644" type="term" mode="match">
                             <term type="translationMain">saṅgha</term>
-                            <term xml:lang="Bo-Ltn" status="verified" n="1">dge ’dun </term>
-                            <term xml:lang="bo" n="1">དགེ་འདུན།</term>
-                            <term xml:lang="Sa-Ltn" status="verified" type="attestedSource">saṅgha</term>
-                            <note type="definition">
-                                <p> Though often specifically reserved for the monastic community, this term can be applied to any
-                                    of the four Buddhist communities‍—monks, nuns, laymen, and laywomen‍—as well as to identify the different groups
-                                    of practitioners, like the community of bodhisattvas or the community of śrāvakas. It is also the third of the
-                                    Three Jewels (<foreign xml:lang="Sa-Ltn" type="term">triratna</foreign>) of Buddhism: the Buddha, the Teaching,
-                                    and the Community.</p>
-                            </note>
+                            <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">saṅgha</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dge ’dun</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">དགེ་འདུན།</term>
                         </gloss>
                     </item>
 
@@ -9514,7 +9510,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1">སྐྱེ་དགུའི་བདག་མོ་ཆེ།</term>
                             <note type="definition">
                                 <p>The Buddh’s mother’s sister and his stepmother. She was the mother of Nanda, whom the Buddha later inspired to
-                                    become a monk, as recorded in two sūtras bearing his name and elsewhere. She became the first bhikṣunī after the
+                                    become a monk, as recorded in two sūtras bearing his name and elsewhere. She became the first bhikṣuṇī after the
                                     death of the Buddha’s father.</p>
                             </note>
                         </gloss>
