--- a/translations/kangyur/translations/039-004_toh48-the_teaching_on_dreams.xml
+++ b/translations/kangyur/translations/039-004_toh48-the_teaching_on_dreams.xml
@@ -38,7 +38,7 @@
                     Sucharitakul and Pema Choeden Namgyal Abrahams</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -57,7 +57,7 @@
                     </licence>
                 </availability>
                 <idno xml:id="UT22084-039-004"/>
-                <date>2024-03-30</date>
+                <date>2024-09-23</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh48" type="text">
@@ -174,6 +174,9 @@
                 <change who="#konchog" when="2024-09-26T14:40:10.875Z" type="text-version" status="1.0.3" xml:id="UT22084-039-004-648">
                     <desc>Fixed one title in n. 7.</desc>
                 </change>
+                <change who="#celso" when="2024-10-22T16:49:10.305Z" type="text-version" status="1.0.4" xml:id="UT22084-039-004-649">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -182,7 +185,7 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
         <front>
-            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="summary" xml:id="UT22084-039-004-summary">
+            <div type="summary" xml:id="UT22084-039-004-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-039-004-47"/>
                 <p tid="2">
@@ -196,8 +199,8 @@
                     offers a rare, detailed discourse on dream signs and their relation to the
                     bodhisattva path, making it a uniquely important source on bodhisattva practice
                     in Mahāyāna literature.</p>
-            </tei:div>
-            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment" xml:id="UT22084-039-004-acknowledgment">
+            </div>
+            <div type="acknowledgment" xml:id="UT22084-039-004-acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-039-004-48"/>
                 <p tid="4">This text was translated by Khenpo Kunga Sherab (University of Toronto)
@@ -214,10 +217,10 @@
                 <p tid="7">The translation of this text has been made possible through the generous
                     sponsorship of Cosmo Namkha Namgyal Sucharitakul, Kuhn Sucharitakul, and Pema
                     Choeden Namgyal Abrahams.</p>
-            </tei:div>
-            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="introduction" xml:id="UT22084-039-004-introduction">
+            </div>
+            <div type="introduction" xml:id="UT22084-039-004-introduction">
                 <head type="introduction" tid="8">Introduction</head>
-                <tei:div type="section" xml:id="UT22084-039-004-introduction-1">
+                <div type="section" xml:id="UT22084-039-004-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-039-004-52"/>
                     <p tid="10">
                         <title xml:lang="en">The Teaching on Dreams</title> is the fourth
@@ -375,15 +378,15 @@
                         well as the variants listed in the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>) of the Kangyur. The sūtra is
                         generally consistent across the Tibetan recensions consulted, but a few
                         substantive variants have been noted.</p>
-                </tei:div>
-            </tei:div>
+                </div>
+            </div>
         </front>
         <body>
-            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="translation" xml:id="UT22084-039-004-translation">
+            <div type="translation" xml:id="UT22084-039-004-translation">
                 <head type="translation"> The Translation </head>
                 <head type="titleHon" tid="18">The Noble Mahāyāna Sūtra</head>
                 <head type="titleMain" tid="19">The Teaching on Dreams</head>
-                <tei:div type="section" xml:id="UT22084-039-004-section-1">
+                <div type="section" xml:id="UT22084-039-004-section-1">
                     <milestone unit="chunk" xml:id="UT22084-039-004-71"/>
                     <p tid="23">
                         <ref cRef="F.203.b" type="folio" xml:id="UT22084-039-004-534"/>
@@ -2926,24 +2929,24 @@
                     <trailer tid="277">This concludes “<title xml:lang="en">The Teaching on
                         Dreams</title>,” the fourth of the one hundred thousand sections of the
                         Dharma discourse known as The Noble Great Heap of Jewels.</trailer>
-                </tei:div>
-                <tei:div type="colophon" xml:id="UT22084-039-004-colophon">
+                </div>
+                <div type="colophon" xml:id="UT22084-039-004-colophon">
                     <head type="colophon" tid="278">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-039-004-403"/>
                     <p tid="279">It was translated and finalized by the Indian scholar Prajñāvarman
                         and the translator-editor Bandé Yeshé Dé and others.<note place="end" xml:id="UT22084-039-004-404"> This colophon is found only in the Lhasa,
                             Narthang, and Stok Palace Kangyurs.</note>
                     </p>
-                </tei:div>
-            </tei:div>
+                </div>
+            </div>
         </body>
         <back>
-            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="notes" xml:id="UT22084-039-004-notes">
+            <div type="notes" xml:id="UT22084-039-004-notes">
                 <head type="notes" tid="280">Notes</head>
-            </tei:div>
-            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="listBibl" xml:id="UT22084-039-004-listBibl">
+            </div>
+            <div type="listBibl" xml:id="UT22084-039-004-listBibl">
                 <head type="listBibl" tid="282">Bibliography</head>
-                <tei:div type="section" xml:id="UT22084-039-004-listBibl-1">
+                <div type="section" xml:id="UT22084-039-004-listBibl-1">
                     <head type="section" tid="283">Source Text</head>
                     <bibl xml:id="UT22084-039-004-405">
                         <title xml:lang="Bo-Ltn">’phags pa rmi lam
@@ -2969,8 +2972,8 @@
                         <title xml:lang="Zh-Ltn">Jing ju tian zi
                             hui</title>
                         <foreign xml:lang="zh">淨居天子會</foreign> (<foreign xml:lang="Sa-Ltn">Svapnanirdeśa</foreign>) Taishō 310-4 (<ref target="https://cbetaonline.dila.edu.tw/en/T11n0310_p0080c15">CBETA</ref>). </bibl>
-                </tei:div>
-                <tei:div type="section" xml:id="UT22084-039-004-listBibl-2">
+                </div>
+                <div type="section" xml:id="UT22084-039-004-listBibl-2">
                     <head type="section" tid="284">Other Canonical Sources </head>
                                       
                     <bibl xml:id="UT22084-039-004-412">84000. <title xml:lang="en">
@@ -3023,8 +3026,8 @@
                         <title xml:lang="Bo-Ltn">phung po gsum pa’i
                         mdo</title> (<title xml:lang="Sa-Ltn">Triskandhakasūtra</title>). Toh
                         284, Degé Kangyur vol. 68 (mdo sde, ya), folios 57.a–77.a.</bibl>
-                </tei:div>
-                <tei:div type="section" xml:id="UT22084-039-004-listBibl-3">
+                </div>
+                <div type="section" xml:id="UT22084-039-004-listBibl-3">
                     <head type="section" tid="285">Other Sources</head>
 
                     <bibl xml:id="UT22084-039-004-638">Campany, Robert Ford. <title xml:lang="en">The Chinese Dreamscape: 300 BCE−800 CE</title>. Cambridge: Harvard
@@ -3072,9 +3075,9 @@
                     <bibl xml:id="UT22084-039-004-643">Young, Serinity. <title xml:lang="en">Dreaming in the Lotus: Buddhist Dream Narrative, Imagery, and
                             Practice</title>. Boston: Wisdom Publications, 1999.</bibl>
 
-                </tei:div>
-            </tei:div>
-            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary" xml:id="UT22084-039-004-glossary">
+                </div>
+            </div>
+            <div type="glossary" xml:id="UT22084-039-004-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-039-004-604">
@@ -4448,7 +4451,7 @@
                         </gloss>
                     </item>
                 </list>
-            </tei:div>
+            </div>
         </back>
     </text>
 </TEI>
