--- a/translations/kangyur/translations/094-009_toh732,992-the_yasovati_dharani.xml
+++ b/translations/kangyur/translations/094-009_toh732,992-the_yasovati_dharani.xml
@@ -21,7 +21,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-094-009-143">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -42,7 +42,7 @@
                 <idno xml:id="UT22084-094-009"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means that
                     these ids diverge slightly from the standard logic.</note>
-                <date>2024-05-17</date>
+                <date>2024-09-16</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh732" type="text">
@@ -158,6 +158,9 @@
                 </change>
                 <change who="#andre" when="2024-09-22T13:10:12.752Z" type="text-version" status="1.0.1" xml:id="UT22084-094-009-152">
                     <desc>Glossary integration revised, activated in CG + definition of Yaśovatī updated</desc>
+                </change>
+                <change who="#celso" when="2024-10-22T16:51:08.344Z" type="text-version" status="1.0.2" xml:id="UT22084-094-009-153">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
