--- a/translations/kangyur/translations/072-038_toh338-the_exposition_of_karma.xml
+++ b/translations/kangyur/translations/072-038_toh338-the_exposition_of_karma.xml
@@ -31,7 +31,7 @@
                     &amp; family.</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.7 <date>2024</date>
+                <edition>v 1.1.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -214,7 +214,11 @@
                     <desc>updated links.</desc>
                 </change>
                 <change who="#martina-cotter" when="2024-10-14T13:04:54.666Z" type="text-version" status="1.1.7" xml:id="UT22084-072-038-1563">
-                    <desc>updated Dharmacakra to Dharmachakra with respect to the translation group.</desc>
+                    <desc>updated Dharmacakra to Dharmachakra with respect to the translation
+                        group.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-10-22T22:12:30.361Z" type="text-version" status="1.1.8" xml:id="UT22084-072-038-1567">
+                    <desc>updates to various bib entries and notes from revisions.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -955,10 +959,15 @@
                     </q>
                     <milestone unit="chunk" xml:id="UT22084-072-038-101"/>
                     <p tid="70">“When killing is done few times and on a small scale, it leads to
-                        having a short lifespan.<note place="end" xml:id="UT22084-072-038-102"> The
-                            Sanskrit editions (Lévi 1932, p. 33; Kudo 2004, pp. 40 and 41) contain
-                            an additional passage referring to ten evil consequences of killing
-                            living beings mentioned in a <title xml:lang="Sa-Ltn">Nandikasūtra</title>. </note>
+                        having a short lifespan.<note place="end" xml:id="UT22084-072-038-102">The Sanskrit editions (Lévi 1932, p. 33; Kudo
+                            2004, pp. 40 and 41) contain an additional passage that mentions ten
+                            evil consequences ("disadvantages") of killing living beings (without
+                            listing them) and refer to the <title xml:lang="Sa-Ltn">
+                                <ref target="http://read.84000.co/translation/toh334.html">Nandikasūtra</ref>
+                            </title> for the full list; for the
+                            complete passage in a surviving Skt. witness of a version of the
+                            <title xml:lang="Sa-Ltn">Nandikasūtra</title>, the <title xml:lang="Sa-Ltn">Ārya­nandika­pari­pṛcchā­sūtra</title>, see Vinīta 2010, 109–11.
+                        </note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-072-038-103"/>
                     <p tid="71">“What kind of action leads to a long life? Abstaining from killing;
@@ -1391,9 +1400,14 @@
                                 <foreign xml:lang="Sa-Ltn" type="term">masi</foreign> and <foreign xml:lang="Sa-Ltn" type="term">pustaka</foreign>, see Falk 1993,
                             pp. 241 and 305–6 (<foreign xml:lang="Sa-Ltn" type="term">pustaka</foreign> [“skin”] perhaps meant tree bark). </note> and,
                         as explained in the <title xml:lang="Sa-Ltn">Nandikasūtra</title>,<note place="end" xml:id="UT22084-072-038-161">For identification of the
-                                <title xml:lang="Sa-Ltn">Nandikasūtra</title>, see Kudo 2004, p.
-                            230, n. 3; p. 233, n. 6 and p. 240, n. 13.</note>
-                        <title xml:lang="Sa-Ltn"> </title> one does not drink alcohol. <ref cRef="F.280.b" type="folio" xml:id="UT22084-072-038-990"/> The
+                                <title xml:lang="Sa-Ltn">Nandikasūtra</title> (Toh 334), see Kudo
+                            2004, p. 230, n. 3; p. 233, n. 6 and p. 240, n. 13. For an English
+                            translation of the Tibetan version of the <title xml:lang="Sa-Ltn">Nandikasūtra</title>, see <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh334.html">The Sūtra
+                                    of Nandika</ref>
+                            </title> (Toh 334). For an edition and English
+                            translation of the extant Skt. witness, the <title xml:lang="Sa-Ltn">Ārya­nandika­pari­pṛcchā­sūtra</title>, see
+                            Vinīta 2010, pp. 97–114.</note> one does not drink alcohol. <ref cRef="F.280.b" type="folio" xml:id="UT22084-072-038-990"/> The
                             thirty-five<note place="end" xml:id="UT22084-072-038-162"> MS[A] instead
                             mentions forty faults of drinking alcohol (<foreign xml:lang="Sa-Ltn" type="quote">catvārīṃśad ādīnavāḥ madyadoṣāḥ</foreign>; Kudo 2004,
                             p. 70). The Tibetan follows MS[B]. </note> faults of drinking alcohol
@@ -3714,7 +3728,8 @@
                         embrace what is not the true Dharma; one ardently abandons the true Dharma;
                         one will not want to pay attention to the experts; one will indolent
                         regarding what one should be careful about; one will be far away from
-                        nirvāṇa; one will do and accumulate actions that lead to intoxication; and
+                        nirvāṇa; one will do and accumulate actions that lead to intoxication;
+                        <note place="end" xml:id="UT22084-072-038-1565">Cp. this list to the one in <title xml:lang="en">The Sūtra of Nandika</title> (<title xml:lang="Sa-Ltn">Nandikasūtra</title>, Toh 334), <ptr target="#UT22084-072-034-92"/>, and to the one in Vinīta 2010, pp. 127–31.</note> and
                         after one has died, one will fall into the lower realms of existence, into
                         evil destinies—one will be reborn in the hell realms. </p>
                     <milestone unit="chunk" xml:id="UT22084-072-038-553"/>
@@ -4763,6 +4778,9 @@
                         Group. <title xml:lang="en">The Words of My Perfect Teacher</title>. First
                         Edition, London: HarperCollins, 1994. Second Edition, Walnut Creek:
                         Sage-Altamira, 1998. Reprinted, New Haven: Yale University Press, 2010. </bibl>
+                    <bibl xml:id="UT22084-072-038-1564">Proença, Giuliano, trans. <ref target="https://read.84000.co/translation/toh334.html">The Sūtra of
+                            Nandika</ref> (<title xml:lang="Sa-Ltn">Nandikasūtra</title>, Toh 334).
+                        84000: Translating the Words of the Buddha, 2024.</bibl>
                     <bibl xml:id="UT22084-072-038-753">Rhys Davids, T. W., and William Stede. <title xml:lang="en">The Pali Text Society’s Pali–English Dictionary</title>.
                         London: Pali Text Society, 1921–25.</bibl>
                     <bibl xml:id="UT22084-072-038-754">Rosenberg, Friedrich. “Deux fragments
@@ -4791,6 +4809,11 @@
                             Prasannapadā, Verses 17.1–20</title>. Wiener Studien zur Tibetologie und
                         Buddhismuskunde 64. Vienna: Arbeitskreis für Tibetische und Buddhistische
                         Studien Universität Wien, 2006.</bibl>
+                    <bibl xml:id="UT22084-072-038-1566">Vinītā, Bhikṣuṇī, ed. and trans. <title xml:lang="en">A Unique
+                            Collection of Twenty Sūtras in a Sanskrit Manuscript from the
+                            Potala</title>. Sanskrit Texts from the Tibetan Autonomous Region 7/1. Vol. 1: 97–141.
+                        Beijing: China Tibetology Publishing House; Vienna: Austrian Academy of
+                        Sciences Press, 2010.</bibl>
                     <bibl xml:id="UT22084-072-038-761">Wogihara, Unrai, ed. <title xml:lang="en">Bodhisattvabhūmi: A Statement of Whole Course of the Bodhisattva (Being
                             Fifteenth Section of Yogācārabhūmi)</title>. Tokyo: Sankibo Buddhist
                         Bookstore, 1971. First published 1930.</bibl>
@@ -7565,10 +7588,14 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ bo’i mdo</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགའ་བོའི་མདོ།</term>
                             <note type="definition">
-                                <p>This sūtra does not seem to have survived in its original (we
-                                    possess only the Tibetan translation under the title <title xml:lang="Bo-Ltn">’phags pa dga’ ba can gyi mdo</title> (Toh
-                                        334)<ref rend="pending" target="https://read.84000.co/translation/toh334.html"/>.
-                                    For a French translation, see Feer 1883, pp. 243–49. </p>
+                                <p>An often-quoted sūtra in which the Buddha teaches the negative
+                                    consequences of breaking the five precepts, and in particular
+                                    inebriation by alcohol, to the layman Nandika; see The <title xml:lang="en">
+                                        <ref target="http://read.84000.co/translation/toh334.html">Sūtra of Nandika</ref>
+                                    </title> (<title xml:lang="Sa-Ltn">Nandikasūtra</title>, Toh 334). For an
+                                    edition and English translation of the extant Skt. witness, see
+                                    the <title xml:lang="Sa-Ltn">Ārya­nandika­pari­pṛcchā­sūtra</title>,
+                                    see Vinīta 2010, pp. 97–114.</p>
                             </note>
                         </gloss>
                     </item>
