--- a/translations/kangyur/translations/090-001_toh557-the_sutra_of_the_sublime_golden_light_3.xml
+++ b/translations/kangyur/translations/090-001_toh557-the_sutra_of_the_sublime_golden_light_3.xml
@@ -37,7 +37,7 @@
                 <sponsor xml:id="UT22084-090-001-6">May Gu, Likai Gu and Tiffany Tai, Lillian Gu and Jerry Yen, and dedicated to George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -153,6 +153,9 @@
                 </change>
                 <change who="#celso" when="2024-10-22T16:21:41.253Z" type="text-version" status="1.0.3" xml:id="UT22084-090-001-2040">
                     <desc>corrected term bhikṣuṇī</desc>
+                </change>
+                <change who="#andre" when="2024-10-23T10:13:41.363Z" type="text-version" status="1.0.4" xml:id="UT22084-090-001-2041">
+                    <desc>Glossary matching revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -7468,7 +7471,7 @@
                         1958.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-090-001-glossary">
+            <div type="glossary" xml:id="UT22084-090-001-glossary">
                 <list type="glossary">
                     <item>
                         <gloss xml:id="UT22084-090-001-1574" type="term" mode="match">
@@ -9505,13 +9508,11 @@
                     <item>
                         <gloss xml:id="UT22084-090-001-1740" type="person" mode="match">
                             <term type="translationMain">Mahāprajāpatī</term>
-                            <term xml:lang="Sa-Ltn" status="verified" type="attestedDictionary">mahāprajāpatī</term>
-                            <term xml:lang="Bo-Ltn" status="verified" type="attestedSource" n="1">skye dgu’i bdag mo che</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">སྐྱེ་དགུའི་བདག་མོ་ཆེ།</term>
+                            <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">mahāprajāpatī</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">skye dgu’i bdag mo che</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྐྱེ་དགུའི་བདག་མོ་ཆེ།</term>
                             <note type="definition">
-                                <p>The Buddh’s mother’s sister and his stepmother. She was the mother of Nanda, whom the Buddha later inspired to
-                                    become a monk, as recorded in two sūtras bearing his name and elsewhere. She became the first bhikṣuṇī after the
-                                    death of the Buddha’s father.</p>
+                                <p>The Buddha’s mother’s sister and his stepmother. She was the mother of Nanda, whom the Buddha later inspired to become a monk, as recorded in two sūtras bearing his name and elsewhere. She became the first bhikṣuṇī after the death of the Buddha’s father.</p>
                             </note>
                         </gloss>
                     </item>
@@ -10019,17 +10020,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-090-001-1776">
+                        <gloss xml:id="UT22084-090-001-1776" type="person" mode="match">
                             <term type="translationMain">Śakra</term>
-                            <term xml:lang="Bo-Ltn" status="verified" n="1">brgya byin </term>
-                            <term xml:lang="bo" n="1">བརྒྱ་བྱིན།</term>
-                            <term xml:lang="Sa-Ltn" status="verified" type="attestedSource">śakra</term>
-                            <note type="definition">
-                                <p> The lord of the gods in the Heaven of the Thirty-Three (<foreign xml:lang="Sa-Ltn" type="term">trāyastriṃśa</foreign>). Alternatively known as Indra, the deity that is called “lord of the gods” dwells on
-                                    the summit of Mount Sumeru and wields the thunderbolt. The Tibetan translation <foreign xml:lang="Bo-Ltn" type="term">brgya byin</foreign> (meaning “one hundred sacrifices”) is based on an etymology that <foreign xml:lang="Bo-Ltn" type="term">śakra</foreign> is an abbreviation of <foreign xml:lang="Bo-Ltn" type="term">śata-kratu</foreign>, one who has performed a hundred sacrifices. Each world with a central Sumeru has a
-                                    Śakra. Also known by other names such as Kauśika, Devendra, and Śacipati.</p>
-                            </note>
                             <term type="translationAlternative">Indra</term>
+                            <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">śakra</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">brgya byin</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བརྒྱ་བྱིན།</term>
                         </gloss>
                     </item>
                     <item>
