--- a/translations/kangyur/placeholders/076-004_toh350-the_history_of_kanakavarna.xml
+++ b/translations/kangyur/placeholders/076-004_toh350-the_history_of_kanakavarna.xml
@@ -18,14 +18,15 @@
                 <editor role="reviser" xml:id="UT22084-076-004-16">Khenpo Chowang</editor>
                 <editor role="projectEditor" xml:id="UT22084-076-004-25">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-076-004-34">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-076-004-48">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-076-004"/>
                 <date/>
             </publicationStmt>
@@ -79,6 +80,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-22T10:05:49.575Z" type="text-version" status="0.0.6" xml:id="UT22084-076-004-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-22T10:06:39.753Z" type="text-version" status="0.0.7" xml:id="UT22084-076-004-49">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-23T13:27:37.943Z" type="translation-status" status="2.a" xml:id="UT22084-076-004-50">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-23T13:27:37.943Z" type="text-version" status="0.0.8" xml:id="UT22084-076-004-51">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
